--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,5 @@ url: "https://labs.techprime.com.au"
 
 theme: minima
 plugins: []
+paginate: 5 # Number of posts per page
+paginate_path: "/page:num/" # Path for paginated pages
