--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ baseurl: ""
 url: "https://labs.techprime.com.au" 
 
 theme: minima
-plugins: []
+plugins: 
+  - jekyll-paginate
 paginate: 5 # Number of posts per page
 paginate_path: "/page:num/" # Path for paginated pages
